--- a/index.html
+++ b/index.html
@@ -1,7 +1,53 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Valentine's Day Card</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #fff;
+            text-align: center;
+            padding-top: 50px;
+        }
+        .card {
+            margin: auto;
+            width: 300px;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 10px;
+            background-color: #f9f9f9;
+        }
+        .card img {
+            width: 100px;
+            height: auto;
+        }
+        .card button {
+            display: block;
+            margin: 10px auto;
+            padding: 10px 20px;
+            font-size: 16px;
+            color: #fff;
+            background-color: #28a745;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        .card button:hover {
+            background-color: #218838;
+        }
+    </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <div class="card">
+        <img src="san val.png" alt="Valentine Bear">
+        <h3>Will you be my Valentine?</h3>
+        <button onclick="alert('Yes, I will be your Valentine!')">Yes</button>
+        <button onclick="alert('Are you positive???')">Are you positive???</button>
+    </div>
+    <script>
+        // Aquí puedes agregar JavaScript si necesitas más interactividad
+    </script>
 </body>
 </html>
