--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valentine's Day Card</title>
+    <title>Valentine's Day Card para mi curiosa</title>
 
     <style>
         .hidden {
@@ -91,11 +91,11 @@
     </div>
 
         <!-- Contenido nuevo a mostrar después de presionar el botón verde -->
-        <div id="newContent" class="hidden">
+    <div id="newContent" class="hidden">
         <h2>¡Feliz Día de San Valentín!</h2>
-        <img src="happycat.gif" alt="GIF Animado">
+        <img src="san val.png" alt="Nueva imagen">
         <p>Mi amor feliz 14 de febrero, esta vez no te podre dar flores pero quiero que esta pagina siempre se quede para nosotros donde puedas ver cada una de nuestras fotos juntos y que nunca olvidemos cada uno de esos momentos. Te amo con toda mi alma mi ardilla flamita enojona <# </p>
-        </div>
+    </div>
 
     <script>
         var images = [
