--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="card">
         <img src="san val.png" alt="Valentine Bear" id="bearImage">
         <h3>Quieres ser mi San Valentin?</h3>
-        <button class="yes-button" id="yesBtn" onclick="showNewContent()" >Sip<#</button>
+        <button class="yes-button" id="yesBtn" onclick="showNewContent()" >Sip</button>
         <button class="no-button" id="noBtn" onclick="changeTextAndGrowYesButton()">No quiero ser tu San Valentín</button>
     </div>
 
