--- a/index.html
+++ b/index.html
@@ -164,6 +164,10 @@
             imgElement.src = 'llorando.png'; // Establece la imagen fija
         }
         function showNewContent() {
+            console.log(document.getElementById('card')); // Debería mostrar el elemento en la consola
+            console.log(document.getElementById('newContent')); // Debería mostrar el elemento en la consola
+
+
         // Oculta el contenido anterior
             document.getElementById('card').style.display = 'none';
 
