--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <!-- Contenido nuevo a mostrar después de presionar el botón verde -->
     <div id="newContent" class="hidden">
         <h2>¡Feliz Día de San Valentín!</h2>
-        <img src="san val.png" alt="Nueva imagen">
+        <img src="happycat.gif" alt="GIF">
         <p>Mi amor feliz 14 de febrero, esta vez no te podre dar flores pero quiero que esta pagina siempre se quede para nosotros donde puedas ver cada una de nuestras fotos juntos y que nunca olvidemos cada uno de esos momentos. Te amo con toda mi alma mi ardilla flamita enojona <# </p>
     </div>
 
