--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             padding-top: 50px;
             margin: 0;
         }
-        .card {
+        .card1 {
             margin: auto;
             max-width: 90%;
             width: 300px;
@@ -26,11 +26,11 @@
             background-color: #f9f9f9;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         }
-        .card img {
+        .card1 img {
             max-width: 80%;
             height: auto;
         }
-        .card button {
+        .card1 button {
             display: block;
             width: 60%;
             margin: 10px auto;
@@ -55,28 +55,28 @@
 
         /* Responsive styles */
         @media (min-width: 576px) { /* For tablets */
-            .card {
+            .card1 {
                 width: 50%;
             }
         }
 
         @media (min-width: 768px) { /* For small desktops */
-            .card {
+            .card1 {
                 width: 40%;
             }
-            .card button {
+            .card1 button {
                 width: 50%;
             }
         }
 
         @media (min-width: 992px) { /* For medium desktops */
-            .card {
+            .card1 {
                 width: 30%;
             }
         }
 
         @media (min-width: 1200px) { /* For large desktops */
-            .card {
+            .card1 {
                 width: 20%;
             }
         }
