--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             max-width: 100%; /* Asegura que las imágenes no se desborden de su contenedor */
             height: auto; /* Mantiene la proporción de las imágenes */
         }
-        
+
         /* Responsive styles */
         @media (min-width: 576px) { /* For tablets */
             .card1 {
@@ -98,7 +98,7 @@
     <div id="card" class="card1">
         <img src="san val.png" alt="Valentine Bear" id="bearImage">
         <h3>Quieres ser mi San Valentin?</h3>
-        <button class="yes-button" id="yesBtn" onclick="showNewContent()" >Sip</button>
+        <button class="yes-button" id="yesBtn" onclick="showNewContent()" >Sip<#</button>
         <button class="no-button" id="noBtn" onclick="changeTextAndGrowYesButton()">No quiero ser tu San Valentín</button>
     </div>
 
@@ -106,7 +106,7 @@
     <div id="newContent" class="hidden">
         <h2>¡Feliz Día de San Valentín!</h2>
         <img src="happycat.gif" alt="GIF">
-        <p>Mi amor feliz 14 de febrero, esta vez no te podre dar flores pero quiero que esta pagina siempre se quede para nosotros donde puedas ver cada una de nuestras fotos juntos y que nunca olvidemos cada uno de esos momentos. Te amo con toda mi alma mi ardilla flamita enojona <# </p>
+        <p>Mi amor feliz 14 de febrero, esta vez no te podre dar flores pero quiero que esta pagina siempre se quede para nosotros donde puedas ver cada una de nuestras fotos juntos y que nunca olvidemos cada uno de esos momentos. Te amo con toda mi alma mi ardilla flamita enojona <# . Te amo mi niña </p>
         <!-- Contenedor de imágenes -->
         <div class="image-container">
             <img src="val.png" alt="Imagen 1">
@@ -117,6 +117,37 @@
             <img src="dalle2.png" alt="Imagen 6">
             <img src="dalle3.png" alt="Imagen 7">
             <img src="dalle4.png" alt="Imagen 8">
+            <img src="val4.png" alt="Imagen 9">
+            <img src="val5.png" alt="Imagen 10">
+            <img src="val6.png" alt="Imagen 11">
+            <img src="val7.png" alt="Imagen 12">
+            <img src="val8.png" alt="Imagen 13">
+            <img src="val9.png" alt="Imagen 14">
+            <img src="val10.png" alt="Imagen 15">
+            <img src="val11.png" alt="Imagen 16">
+            <img src="val12.png" alt="Imagen 17">
+            <img src="val13.png" alt="Imagen 18">
+            <img src="val14.png" alt="Imagen 19">
+            <img src="val15.png" alt="Imagen 20">
+            <img src="val16.png" alt="Imagen 21">
+            <img src="val17.png" alt="Imagen 22">
+            <img src="val18.png" alt="Imagen 23">
+            <img src="val19.png" alt="Imagen 24">
+            <img src="val20.png" alt="Imagen 25">
+            <img src="val21.png" alt="Imagen 26">
+            <img src="val22.png" alt="Imagen 27">
+            <img src="val23.png" alt="Imagen 28">
+            <img src="val24.png" alt="Imagen 29">
+            <img src="val25.png" alt="Imagen 30">
+            <img src="val26.png" alt="Imagen 31">
+            <img src="val27.png" alt="Imagen 32">
+            <img src="val28.png" alt="Imagen 33">
+            <img src="val29.png" alt="Imagen 34">
+            <img src="val30.png" alt="Imagen 35">
+            <img src="val31.png" alt="Imagen 36">
+            <img src="val32.png" alt="Imagen 37">
+            <img src="val33.png" alt="Imagen 38">
+            <img src="val34.png" alt="Imagen 39">
             <!-- Agrega más imágenes según necesites -->
         </div>
     </div>
