--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
             <img src="val33.png" alt="Imagen 38">
             <img src="val34.png" alt="Imagen 39">
             <!-- Agrega más imágenes según necesites -->
+
+            <p>Daniel is working in new content for u beso beso  </p>
+            <img src="danielchambeando.png" alt="Imagen chambeando">
         </div>
     </div>
 
