--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
         }
 
         .image-container img {
-            flex: 1 1 200px; /* Las imágenes intentarán ocupar al menos 200px, pero pueden crecer si hay espacio disponible */
+            flex: 1 1 150px; /* Cambiado de 200px a 150px para hacer las imágenes inicialmente más pequeñas */
+            width: 150px; /* Establece un ancho inicial para las imágenes */
             max-width: 100%; /* Asegura que las imágenes no se desborden de su contenedor */
             height: auto; /* Mantiene la proporción de las imágenes */
         }
