--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         .image-container img {
             flex: 1 1 150px; /* Cambiado de 200px a 150px para hacer las imágenes inicialmente más pequeñas */
-            
+            width: 150px;
             max-width: 100%; /* Asegura que las imágenes no se desborden de su contenedor */
             height: auto; /* Mantiene la proporción de las imágenes */
         }
